--- a/style.css
+++ b/style.css
@@ -2,3 +2,41 @@ body {
     margin: 0;
     padding: 0;
 }
+
+nav {
+    background-color: #b39ddb;
+    padding: 10px 0;
+}
+
+ul {
+    list-style: none;
+}
+
+li {
+    display: inline;
+    margin: 0 10px;
+}
+
+header {
+    text-align: center;
+    height: 200px;
+    background-color: turquoise;
+    border: 1px solid gray;
+   
+}
+
+section {
+    text-align: center;
+    padding: 5px;
+}
+
+.box {
+    display: inline-block;
+    height: 50px;
+    width: 100px;
+    background-color: red);
+    border: 1px solid black;
+    padding: 0 20px;
+    margin: 0 0px;
+}
+
